--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,5 +1,5 @@
 .container {
-    border: 1px solid greenyellow;
+    border: 1px solid rgb(47, 220, 255);
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 20px;
@@ -16,7 +16,7 @@ label {
 }
 
 .btn {
-    background-color: greenyellow;
+    background-color: rgb(47, 220, 255);
     width: 100px;
     padding: 10px;
     border: 1px solid transparent;
@@ -26,7 +26,7 @@ label {
 }
 
 .btn:hover {
-    box-shadow: 2px 2px 10px rgb(67, 67, 67);
+    box-shadow: 2px 2px 10px rgb(225, 224, 224);
 }
 
 .input {
