--- a/src/components/ModalChange/ModalChange.module.css
+++ b/src/components/ModalChange/ModalChange.module.css
@@ -18,7 +18,7 @@
 }
 
 .form button {
-    background-color: aquamarine;
+    background-color: rgb(47, 220, 255);
     width: 100px;
     padding: 5px;
     border: 1px solid transparent;
