--- a/src/components/ModalDelete/ModalDelete.module.css
+++ b/src/components/ModalDelete/ModalDelete.module.css
@@ -15,7 +15,7 @@
 }
 
 .container button {
-    background-color: aquamarine;
+    background-color: rgb(47, 220, 255);
     width: 100px;
     padding: 5px;
     border: 1px solid transparent;
