--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,7 +4,7 @@
 }
 
 .container a {
-    background-color: aquamarine;
+    background-color: rgb(47, 220, 255);
     width: 100px;
     padding: 5px;
     border: 1px solid transparent;
